# postale

./: README.md  pyproject.toml
src/postale/: __init__.py
